qttools-opensource-src (5.12.2-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Enable qdoc build on kfreebsd-any and five mips* architectures (closes:
    #921206).
  * Update .install files.
  * Update symbols files from the current build log.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 14 Mar 2019 17:50:26 +0300

qttools-opensource-src (5.11.3-4) unstable; urgency=medium

  * Limit also the libclang-dev build dependency on the architectures where
    it is available.
  * Update lintian overrides.

 -- Pino Toscano <pino@debian.org>  Sat, 12 Jan 2019 10:42:39 +0100

qttools-opensource-src (5.11.3-3) unstable; urgency=medium

  * Split qdoc into a separate package (qdoc-qt5), build it only on
    architectures where LLVM/clang is available (closes: #904688).

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 04 Jan 2019 19:06:50 +0300

qttools-opensource-src (5.11.3-2) unstable; urgency=medium

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:33:15 -0300

qttools-opensource-src (5.11.3-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 10 Dec 2018 12:10:01 -0300

qttools-opensource-src (5.11.2-5) unstable; urgency=medium

  * Build qdoc with QDOC_PASS_ISYSTEM defined. This is needed because qmake
    passes Qt include directories as -isystem flags, not as regular -I.
    See QTBUG-70896, LP: #1799111.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 15 Nov 2018 11:03:30 +0300

qttools-opensource-src (5.11.2-4) unstable; urgency=medium

  * Drop libvulkan-dev build-dependency, new qtbase5-dev will depend